src/app/pages/options/options.component.scss
@import "../../@theme/styles/themes";

@include nb-install-component() {
  .ui-g {
    margin-top: 3rem;
  }

  ngx-layout-direction-switcher {
    padding-left: 0.5em;
    padding-right: 0.5em;
  }

  ngx-switcher {
    padding-left: 0.5em;
    padding-right: 0.5em;
  }
}

